--- a/user.html
+++ b/user.html
@@ -22,6 +22,7 @@
             <table class="user-table">
                 <thead>
                     <tr>
+                        <th>ลำดับ</th>
                         <th>ชื่อ</th>
                         <th>นามสกุล</th>
                         <th>อายุ</th>
